[gd_scene load_steps=3 format=3 uid="uid://7xdggafynobu"]

[ext_resource type="Script" path="res://Scripts/QuestionPrompt.gd" id="1_a2g0g"]
[ext_resource type="PackedScene" uid="uid://vd2h1sieruw" path="res://Scenes/RadialTimer.tscn" id="2_p23l5"]

[node name="Question Prompt" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a2g0g")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_top = 48.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="RadialTimer" parent="CenterContainer" instance=ExtResource("2_p23l5")]

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
alignment = 1

[node name="Title" type="LineEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Title"

[node name="Spacer" type="ColorRect" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
color = Color(0, 0, 0, 0)

[node name="Artist" type="LineEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Artist"

[node name="Spacer4" type="ColorRect" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
color = Color(0, 0, 0, 0)

[node name="Album" type="LineEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Album"

[node name="Spacer5" type="ColorRect" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
color = Color(0, 0, 0, 0)

[node name="AnswerButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Send Answer"

[connection signal="timeout" from="CenterContainer/RadialTimer" to="." method="_on_timeout"]
[connection signal="text_changed" from="CenterContainer/VBoxContainer/Title" to="." method="_on_title_text_changed"]
[connection signal="text_changed" from="CenterContainer/VBoxContainer/Artist" to="." method="_on_artist_text_changed"]
[connection signal="text_changed" from="CenterContainer/VBoxContainer/Album" to="." method="_on_album_text_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/AnswerButton" to="." method="_on_answer_button_pressed"]
